# modern_android_dev

./: README.md
Android_Hilt/: README.md  settings.gradle.kts
Android_Hilt/app/: build.gradle.kts
Android_Hilt/app/src/main/kotlin/: App.kt
Android_Hilt/gradle/: libs.versions.toml
Android_Hilt/gradle/wrapper/: gradle-wrapper.properties
Android_Hilt/spring_01/: build.gradle.kts  local.properties  settings.gradle.kts
Android_Hilt/spring_01/gradle/: libs.versions.toml
Android_Hilt/spring_01/src/main/kotlin/edu/tyut/spring_01/: Spring01Application.kt
Android_Hilt/spring_01/src/main/resources/: application.yaml
Android_Hilt/spring_01/src/test/kotlin/edu/tyut/spring_01/: Spring01ApplicationTests.kt
Android_Hilt/utils/src/main/kotlin/: Utilities.kt
Android_Hilt/utils/src/test/kotlin/: UtilitiesTest.kt
AppStarter/: settings.gradle.kts
AppStarter/app/: build.gradle.kts
AppStarter/app/src/androidTest/java/edu/tyut/appstarter/: ExampleInstrumentedTest.kt
AppStarter/app/src/main/: AndroidManifest.xml
AppStarter/gradle/: libs.versions.toml
AppStarter/gradle/wrapper/: gradle-wrapper.properties
CustomView/: settings.gradle.kts
CustomView/app/: build.gradle.kts
CustomView/app/src/main/: AndroidManifest.xml
CustomView/app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_user.xml
CustomView/app/src/main/res/values/: strings.xml
CustomView/gradle/: libs.versions.toml
CustomView/gradle/wrapper/: gradle-wrapper.properties
HelloKtorfit/: build.gradle.kts  settings.gradle.kts  uninstall.sh
HelloKtorfit/app/: build.gradle.kts
HelloKtorfit/app/src/main/: AndroidManifest.xml
HelloKtorfit/app/src/main/cpp/: CMakeLists.txt
HelloKtorfit/app/src/main/cpp/include/learn01/: helloKtorFit.hpp
HelloKtorfit/app/src/main/cpp/include/logging/: logging.hpp
HelloKtorfit/app/src/main/cpp/include/pool/: ThreadPool.hpp
HelloKtorfit/app/src/main/cpp/src/learn01/: helloKtorFit.cpp
HelloKtorfit/app/src/main/res/drawable-xxxhdpi/: image.xml  pandas.xml
HelloKtorfit/app/src/main/res/values/: strings.xml  themes.xml
HelloKtorfit/app/src/main/res/xml/: file_paths.xml
HelloKtorfit/gradle/: libs.versions.toml
HelloKtorfit/gradle/wrapper/: gradle-wrapper.properties
HiltLearn/: build.gradle.kts  settings.gradle.kts
HiltLearn/app/: build.gradle.kts
HiltLearn/app/src/main/: AndroidManifest.xml
HiltLearn/app/src/main/res/values/: themes.xml
HiltLearn/gradle/: libs.versions.toml
HiltLearn/gradle/wrapper/: gradle-wrapper.properties
HiltLearn/login/: build.gradle.kts
HiltLearn/login/src/main/: AndroidManifest.xml
ImageCrop/: gradle.properties  settings.gradle.kts
ImageCrop/app/: build.gradle.kts
ImageCrop/app/src/main/: AndroidManifest.xml
ImageCrop/gradle/: libs.versions.toml
ImageCrop/gradle/wrapper/: gradle-wrapper.properties
ImageCrop/imagecrop/: build.gradle.kts  proguard-rules.pro
ImageCrop/imagecrop/src/main/: AndroidManifest.xml
ImageCrop/imagecrop/src/main/res/drawable/: error_placeholder.xml
Kotlin_ProtoBuf/: build.gradle.kts  settings.gradle.kts
Kotlin_ProtoBuf/gradle/: libs.versions.toml
Kotlin_ProtoBuf/gradle/wrapper/: gradle-wrapper.properties
Kotlin_ProtoBuf/src/main/kotlin/edu/tyut/kotlin_protobuf/: KotlinProtoBufApplication.kt
Kotlin_ProtoBuf/src/main/resources/: application.yaml
Kotlin_ProtoBuf/src/test/kotlin/edu/tyut/kotlin_protobuf/: KotlinProtoBufApplicationTests.kt
Kotlin_ProtoBuf_Apk/: settings.gradle.kts
Kotlin_ProtoBuf_Apk/app/: build.gradle.kts
Kotlin_ProtoBuf_Apk/app/src/main/: AndroidManifest.xml
Kotlin_ProtoBuf_Apk/app/src/main/res/values/: strings.xml  themes.xml
Kotlin_ProtoBuf_Apk/app/src/main/res/xml/: network_security_config.xml
Kotlin_ProtoBuf_Apk/gradle/: libs.versions.toml
Kotlin_ProtoBuf_Apk/gradle/wrapper/: gradle-wrapper.properties
OkhttpLearn/: .gitignore  keystore.jks  keystore.properties  settings.gradle.kts
OkhttpLearn/app/: build.gradle.kts
OkhttpLearn/app/src/main/: AndroidManifest.xml
OkhttpLearn/app/src/main/cpp/: CMakeLists.txt
OkhttpLearn/app/src/main/cpp/include/learn01/: learn001.hpp
OkhttpLearn/app/src/main/cpp/include/learn02/: learn002.hpp
OkhttpLearn/app/src/main/cpp/include/logging/: logging.hpp
OkhttpLearn/app/src/main/cpp/src/learn01/: learn001.cpp
OkhttpLearn/app/src/main/cpp/src/learn02/: learn002.cpp
OkhttpLearn/app/src/main/res/values/: strings.xml  themes.xml
OkhttpLearn/gradle/: libs.versions.toml
OkhttpLearn/gradle/wrapper/: gradle-wrapper.properties
OpenSLLearn/: settings.gradle.kts
OpenSLLearn/app/: build.gradle.kts
OpenSLLearn/app/src/main/: AndroidManifest.xml
OpenSLLearn/app/src/main/cpp/: CMakeLists.txt
OpenSLLearn/app/src/main/cpp/include/learn01/: learn001.hpp  openslLearn.hpp
OpenSLLearn/app/src/main/cpp/include/learn02/: NDKCamera.hpp  openslLearn2.hpp
OpenSLLearn/app/src/main/cpp/include/logging/: logging.hpp
OpenSLLearn/app/src/main/cpp/src/learn01/: learn001.cpp  openslLearn.cpp
OpenSLLearn/app/src/main/cpp/src/learn02/: NDKCamera.cpp  openslLearn2.cpp
OpenSLLearn/app/src/main/res/values/: strings.xml  themes.xml
OpenSLLearn/app/src/main/res/xml/: network_security_config.xml
OpenSLLearn/gradle/: libs.versions.toml
OpenSLLearn/gradle/wrapper/: gradle-wrapper.properties
WearOSLearn/: settings.gradle.kts
WearOSLearn/app/: build.gradle.kts
WearOSLearn/app/src/main/res/values/: strings.xml
WearOSLearn/gradle/: libs.versions.toml
WearOSLearn/gradle/wrapper/: gradle-wrapper.properties
WebViewLearn/: keystore.keystore  keystore.properties  settings.gradle.kts
WebViewLearn/app/: build.gradle.kts
WebViewLearn/app/src/main/: AndroidManifest.xml
WebViewLearn/app/src/main/cpp/: CMakeLists.txt  webViewLearn.cpp
WebViewLearn/app/src/main/cpp/include/: Person.hpp  add.hpp  logging.hpp
WebViewLearn/app/src/main/cpp/src/: Person.cpp  add.cpp
WebViewLearn/app/src/main/res/values/: strings.xml  themes.xml
WebViewLearn/app/src/main/res/xml/: file_paths.xml
WebViewLearn/gradle/: libs.versions.toml
WebViewLearn/gradle/wrapper/: gradle-wrapper.properties
(+227 files in other folders)
